--- a/css/style.css
+++ b/css/style.css
@@ -5852,7 +5852,7 @@ main .bg {
   position: absolute;
   right: 100px;
   top: 10px;
-  background: url("../images/calculator.png") no-repeat;
+  background: url("../images/calculator2.png") no-repeat;
 }
 .bettingbar .bettingbox {
   width: calc(100% + 2px);
@@ -5892,13 +5892,12 @@ main .bg {
 }
 .bettingbar .bettingbox .bettingwindow table tr {
   text-align: center;
-  border-bottom: solid 1px #ababab;
 }
 .bettingbar .bettingbox .bettingwindow table tr th {
-  color: #fff;
+  color: #c3c3c3;
   font-size: 12px;
   padding: 8px 10px 9px;
-  background: #3d3d3d;
+  background: #1e1e1e;
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
@@ -5908,6 +5907,7 @@ main .bg {
 .bettingbar .bettingbox .bettingwindow table tr td {
   vertical-align: middle;
   font-size: 14px;
+  color: #bfbfbf;
 }
 .bettingbar .bettingbox .bettingwindow table tr td:nth-of-type(1) {
   width: 10%;
@@ -5924,35 +5924,35 @@ main .bg {
   padding: 2px 8px;
 }
 .bettingbar .bettingbox .bettingwindow table tr td .pitcher {
-  color: #233698;
+  color: #e9e9e9;
 }
 .bettingbar .bettingbox .bettingwindow table tr td .odds {
-  color: #ff0000;
+  color: #33ba04;
 }
 .bettingbar .bettingbox .bettingwindow table tr td p {
-  color: #000;
+  color: #e9e9e9;
   font-size: 12px;
   line-height: 20px;
 }
 .bettingbar .bettingbox .bettingwindow table tr td p.leagueName {
-  color: #4d4d4d;
+  color: #c3c3c3;
 }
 .bettingbar .bettingbox .bettingwindow table tr td p .odds {
   padding-left: 10px;
 }
 .bettingbar .bettingbox .bettingwindow table tr td p.vs {
-  color: #354ecf;
+  color: #c3c3c3;
 }
 .bettingbar .bettingbox .bettingtotal {
   width: 100%;
   height: 45px;
-  background: #828282;
-  color: #fff;
+  background: #171717;
+  color: #e7e7e7;
 }
 .bettingbar .bettingbox .bettingtotal div {
   width: 180px;
   height: 100%;
-  border-right: solid 1px #c7c7c7;
+  border-right: solid 1px #535353;
   float: left;
   line-height: 45px;
   font-size: 14px;
@@ -5963,13 +5963,13 @@ main .bg {
   border: none;
 }
 .bettingbar .bettingbox .bettingtotal div .remind {
-  color: #ffd400;
+  color: #30aa06;
   padding-left: 5px;
 }
 .bettingbar .bettingbox .bettingend {
   width: 100%;
   height: 197px;
-  background: #cccccc;
+  background: #3a3a3a;
 }
 .bettingbar .bettingbox .bettingend p {
   width: 100%;
@@ -5977,6 +5977,7 @@ main .bg {
   font-size: 14px;
   font-weight: bold;
   padding: 17px;
+  color: #e7e7e7;
 }
 .bettingbar .bettingbox .bettingend .endbox {
   width: 50%;
@@ -5987,18 +5988,22 @@ main .bg {
   width: 150px;
   height: 31px;
   margin: 0px 5px 10px 0px;
+  background: linear-gradient(to bottom, #0f0f0f 21%, #303030 100%);
   border-radius: 3px;
-  border: solid 1px #ababab;
+  border: solid 1px #4f4f4f;
+  border-top: none;
+  box-shadow: 0px -1px 0px 0px #797979 inset;
   font-size: 16px;
   padding-left: 5px;
+  color: #ffffff;
 }
 .bettingbar .bettingbox .bettingend .endbox input::placeholder {
   font-weight: bold;
-  color: #c7c7c7;
+  color: #7d7d7d;
   font-size: 15px;
 }
 .bettingbar .bettingbox .bettingend .endbox input:last-child {
-  color: #ff0000;
+  color: #ff1b1b;
 }
 .bettingbar .bettingbox .bettingend .endbox div {
   position: relative;
@@ -6007,42 +6012,41 @@ main .bg {
   float: left;
   margin: 12px 0px 0px 15px;
   font-size: 14px;
+  color: #e7e7e7;
 }
 .bettingbar .bettingbox .bettingend .endbox div .dollar {
   position: absolute;
   top: 10px;
   right: 20px;
+  color: #e7e7e7;
 }
 .bettingbar .bettingbox .bettingend .endbox button {
   width: 85px;
   height: 35px;
   float: left;
   margin: 0px 3px 10px 3px;
-  border: solid 1px #eb0004;
+  border: solid 1px #6a8e2a;
   border-radius: 5px;
   font-size: 17px;
-  color: #4d515d;
+  color: #b0b0b0;
   font-weight: bold;
   line-height: 35px;
-  background: linear-gradient(to top, #efd5d5 0%, #fff 100%);
-  background-color: #efd5d5;
+  background: #212121;
 }
-.bettingbar .bettingbox .bettingend .endbox button:hover {
-  background: linear-gradient(to bottom, #efd5d5 0%, #fff 100%);
-}
-.bettingbar .bettingbox .bettingend .endbox button:active, .bettingbar .bettingbox .bettingend .endbox button.active {
-  background: linear-gradient(to top, #ec0004 0%, #850004 100%);
-  background-color: #850004;
-  color: #fff;
+.bettingbar .bettingbox .bettingend .endbox button:hover, .bettingbar .bettingbox .bettingend .endbox button:active, .bettingbar .bettingbox .bettingend .endbox button.active {
+  background: #4fde17;
+  color: #292929;
 }
 .bettingbar .bettingbox .bettingend .endbox button.cur {
   width: 176px;
-  color: #fff;
-  background: linear-gradient(to bottom, #ec0004 0%, #850004 100%);
-  background-color: #850004;
+  color: #191919;
+  background: #4fad18;
+  border-color: #aef156;
 }
 .bettingbar .bettingbox .bettingend .endbox button.cur:hover, .bettingbar .bettingbox .bettingend .endbox button.cur:active, .bettingbar .bettingbox .bettingend .endbox button.cur.active {
-  background: linear-gradient(to top, #ec0004 0%, #850004 100%);
+  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  color: #46d317;
+  border-color: #2b7d16;
 }
 .bettingbar .bettingbox.open {
   height: 502px;
@@ -6058,18 +6062,21 @@ main .bg {
   top: 150px;
   background: #828282;
   border-radius: 3px 3px 0px 0px;
+  border: solid 1px #2fac17;
+  box-shadow: -4px -2px 10px 0px #3f8a1385, 4px -2px 10px 0px #3f8a1385;
+  background: #242424;
 }
 .bettingCheck .num {
   display: block;
   float: left;
   width: 24px;
   height: 24px;
-  background: #fff;
+  background: linear-gradient(to right, #a1ea22 0%, #34da14 100%);
   border-radius: 5px;
   margin: 13px 0px 0px 15px;
   line-height: 28px;
   font-size: 17px;
-  color: #850004;
+  color: #161616;
   position: relative;
   text-align: center;
   /*for IE 9*/
@@ -6086,7 +6093,7 @@ main .bg {
   }
 }
 .bettingCheck .barword {
-  color: #fff;
+  color: #4fde17;
   float: left;
   margin: 18px 0px 0px 10px;
 }
@@ -6095,11 +6102,11 @@ main .bg {
   width: 40px;
   height: 40px;
   border-radius: 40px;
-  background: #cacaca;
-  border: solid 3px #676767;
+  background: #404040;
+  border: solid 3px #4be119;
   right: -50px;
   top: -50px;
-  box-shadow: 0px 0px 0px 5px #cacaca;
+  box-shadow: 0px 0px 0px 5px #404040;
 }
 .bettingCheck .cancelBtn::before {
   content: "";
@@ -6108,7 +6115,7 @@ main .bg {
   height: 18px;
   right: 16px;
   top: 8px;
-  background: #676767;
+  background: #4be119;
   transform: rotate(45deg);
 }
 .bettingCheck .cancelBtn::after {
@@ -6118,19 +6125,22 @@ main .bg {
   height: 18px;
   left: 16px;
   top: 8px;
-  background: #676767;
+  background: #4be119;
   transform: rotate(-45deg);
 }
 .bettingCheck .bettingbox {
-  width: 576px;
+  width: 580px;
   height: 430px;
   margin-top: 50px;
-  background: #ababab;
-  border: solid 2px #828282;
-  border-top-width: 0px;
+  background: #2f2f2f;
+  border: solid 1px #2fac17;
+  border-top-color: #7b7b7b;
   border-radius: 0px 0px 3px 3px;
+  box-shadow: 4px 2px 10px 0px #3f8a1385, -4px 2px 10px 0px #3f8a1385;
   overflow: hidden;
   cursor: default;
+  position: absolute;
+  left: -1px;
 }
 .bettingCheck .bettingbox .bettingwindow {
   width: 100%;
@@ -6144,11 +6154,11 @@ main .bg {
   background-color: transparent;
 }
 .bettingCheck .bettingbox .bettingwindow::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #121212;
   border-radius: 10px;
 }
 .bettingCheck .bettingbox .bettingwindow::-webkit-scrollbar-thumb {
-  background: #b9becf;
+  background: #606360;
   border-radius: 10px;
 }
 .bettingCheck .bettingbox .bettingwindow table {
@@ -6158,13 +6168,12 @@ main .bg {
 }
 .bettingCheck .bettingbox .bettingwindow table tr {
   text-align: center;
-  border-bottom: solid 1px #ababab;
 }
 .bettingCheck .bettingbox .bettingwindow table tr th {
-  color: #fff;
+  color: #c3c3c3;
   font-size: 12px;
   padding: 8px 10px 9px;
-  background: #3d3d3d;
+  background: #1e1e1e;
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
@@ -6174,6 +6183,7 @@ main .bg {
 .bettingCheck .bettingbox .bettingwindow table tr td {
   vertical-align: middle;
   font-size: 14px;
+  color: #bfbfbf;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td:nth-of-type(1) {
   width: 10%;
@@ -6185,40 +6195,40 @@ main .bg {
   width: 45%;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td.tLeft {
-  border-left: solid 1px #8a8a8a;
+  border-left: solid 1px #7b7b7b;
   text-align: left;
   padding: 2px 8px;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td .pitcher {
-  color: #233698;
+  color: #bfbfbf;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td .odds {
-  color: #ff0000;
+  color: #33ba04;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td p {
-  color: #000;
+  color: #e9e9e9;
   font-size: 12px;
   line-height: 20px;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td p.leagueName {
-  color: #4d4d4d;
+  color: #c3c3c3;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td p .odds {
   padding-left: 10px;
 }
 .bettingCheck .bettingbox .bettingwindow table tr td p.vs {
-  color: #354ecf;
+  color: #c3c3c3;
 }
 .bettingCheck .bettingbox .bettingtotal {
   width: 100%;
   height: 45px;
-  background: #828282;
-  color: #fff;
+  background: #171717;
+  color: #e7e7e7;
 }
 .bettingCheck .bettingbox .bettingtotal div {
   width: 180px;
   height: 100%;
-  border-right: solid 1px #c7c7c7;
+  border-right: solid 1px #535353;
   float: left;
   line-height: 45px;
   font-size: 14px;
@@ -6229,13 +6239,13 @@ main .bg {
   border: none;
 }
 .bettingCheck .bettingbox .bettingtotal div .remind {
-  color: #ffd400;
+  color: #33ba04;
   padding-left: 5px;
 }
 .bettingCheck .bettingbox .bettingend {
   width: 100%;
   height: 200px;
-  background: #cccccc;
+  background: #3a3a3a;
 }
 .bettingCheck .bettingbox .bettingend .endbox {
   width: 287px;
@@ -6250,7 +6260,7 @@ main .bg {
 .bettingCheck .bettingbox .bettingend .endbox .remind {
   margin: 0px 0px 0px 40px;
   line-height: 75px;
-  color: #f31d1d;
+  color: #43c31d;
   font-size: 14px;
   position: relative;
 }
@@ -6259,7 +6269,7 @@ main .bg {
   position: absolute;
   width: 20px;
   height: 20px;
-  background: #f31d1d;
+  background: #3dab1e;
   border-radius: 12px;
   left: -25px;
   top: 26px;
@@ -6269,7 +6279,7 @@ main .bg {
   position: absolute;
   width: 4px;
   height: 8px;
-  border: solid 3px #fff;
+  border: solid 3px #22351c;
   border-width: 0px 2px 2px 0px;
   transform: rotate(45deg);
   top: 30px;
@@ -6279,15 +6289,16 @@ main .bg {
   font-size: 13px;
   line-height: 24px;
   margin-left: 10px;
+  color: #bfbfbf;
 }
 .bettingCheck .bettingbox .bettingend .endbox p span {
   padding-left: 5px;
 }
 .bettingCheck .bettingbox .bettingend .endbox p span.listCode {
-  color: #354ecf;
+  color: #7e94ff;
 }
 .bettingCheck .bettingbox .bettingend .endbox p span.way {
-  color: #f31d1d;
+  color: #43c31d;
 }
 .bettingCheck.display {
   display: block;
