--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -4374,7 +4374,7 @@
 						&:hover,&:active,&.active {
 							color: #ffffff;
 							border-color: #87d620;
-							background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+							background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
 						}
 					}
 				}
@@ -4528,7 +4528,7 @@
 					&:hover,&:active,&.active {
 						border-color: #87d620;
 						color: #ffffff;
-						background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+						background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
 					}
 				}
 			}
@@ -4946,7 +4946,7 @@
 					&:hover,&:active,&.active {
 						border-color: #87d620;
 						color: #ffffff;
-						background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+						background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
 					}
 				}
 			}
