--- a/css/style.css
+++ b/css/style.css
@@ -3992,7 +3992,7 @@ main .bg {
 .minetable.withdrawl tr td .inputBox button:hover, .minetable.withdrawl tr td .inputBox button:active, .minetable.withdrawl tr td .inputBox button.active {
   color: #ffffff;
   border-color: #87d620;
-  background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
 }
 .minetable.withdrawl tr td .box {
   display: inline-block;
@@ -4121,7 +4121,7 @@ main .bg {
 .minetable.transpoint tr td button:hover, .minetable.transpoint tr td button:active, .minetable.transpoint tr td button.active {
   border-color: #87d620;
   color: #ffffff;
-  background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
 }
 .minetable.payStyle {
   width: 1150px;
@@ -4467,7 +4467,7 @@ main .bg {
 .minetable.depositMoney tr td .depositBtn:hover, .minetable.depositMoney tr td .depositBtn:active, .minetable.depositMoney tr td .depositBtn.active {
   border-color: #87d620;
   color: #ffffff;
-  background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
 }
 
 .middle {
@@ -5248,12 +5248,12 @@ main .bg {
   border-color: #6a8e2a;
 }
 .signupWindow .signupbox div button:last-child:hover, .signupWindow .signupbox div button:last-child:active, .signupWindow .signupbox div button:last-child.active {
-  background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
   color: #f4f4f4;
   border-color: #6a8e2a;
 }
 .signupWindow .signupbox div button:hover, .signupWindow .signupbox div button:active, .signupWindow .signupbox div button.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   border-color: #2b7d16;
   color: #46d317;
 }
@@ -5635,7 +5635,7 @@ main .bg {
   border-color: #aef156;
 }
 .norbetting .nor_bettingbox .bettingend .endbox button.decideBtn:hover, .norbetting .nor_bettingbox .bettingend .endbox button.decideBtn:active, .norbetting .nor_bettingbox .bettingend .endbox button.decideBtn.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -6044,7 +6044,7 @@ main .bg {
   border-color: #aef156;
 }
 .bettingbar .bettingbox .bettingend .endbox button.cur:hover, .bettingbar .bettingbox .bettingend .endbox button.cur:active, .bettingbar .bettingbox .bettingend .endbox button.cur.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -6313,6 +6313,10 @@ main .bg {
   top: 10%;
   transform: translateX(-50%);
   z-index: 20;
+  border: solid 1px #3e8a13;
+  border-radius: 3px;
+  border-width: 1px 2px;
+  box-shadow: 0px 0px 10px 2px #3c5711;
 }
 .calculator.display {
   display: block;
@@ -6321,24 +6325,25 @@ main .bg {
   width: 100%;
   height: 40px;
   border-radius: 3px 3px 0px 0px;
-  background: #ababab;
-  color: #434343;
+  background: #242424;
+  color: #43dc16;
   position: relative;
   text-align: center;
   line-height: 42px;
   font-size: 14px;
   font-weight: bold;
+  border-bottom: solid 1px #3aad1b;
 }
 .calculator .calbar button {
   position: absolute;
   width: 40px;
   height: 40px;
   border-radius: 40px;
-  background: #cacaca;
-  border: solid 3px #676767;
+  background: #353535;
+  border: solid 3px #4be119;
   right: -50px;
   top: -50px;
-  box-shadow: 0px 0px 0px 5px #cacaca;
+  box-shadow: 0px 0px 0px 5px #353535;
 }
 .calculator .calbar button::before {
   content: "";
@@ -6347,7 +6352,7 @@ main .bg {
   height: 18px;
   right: 16px;
   top: 8px;
-  background: #676767;
+  background: #4be119;
   transform: rotate(45deg);
 }
 .calculator .calbar button::after {
@@ -6357,13 +6362,13 @@ main .bg {
   height: 18px;
   left: 16px;
   top: 8px;
-  background: #676767;
+  background: #4be119;
   transform: rotate(-45deg);
 }
 .calculator .calbox {
   width: 100%;
   height: 430px;
-  background: #747474;
+  background: #303030;
   box-sizing: border-box;
   border-radius: 0px 0px 3px 3px;
   position: relative;
@@ -6372,33 +6377,38 @@ main .bg {
 }
 .calculator .calbox .top {
   padding: 10px 0px;
-  color: #fff;
+  color: #eeeeee;
 }
 .calculator .calbox .top .inputbox input {
   width: 80px;
   height: 24px;
   padding-left: 7px;
-  border: solid 1px #9ba1c5;
+  border: solid 1px #464646;
+  border-top: none;
+  box-shadow: 0px -1px 0px 0px #737373;
   margin: 0px 10px 0px 5px;
   font-size: 15px;
   font-weight: bold;
-  color: #2539a0;
+  color: #ffffff;
+  background: linear-gradient(to bottom, #0f0f0f 21%, #303030 100%);
 }
 .calculator .calbox .top .inputbox button {
   width: 60px;
   height: 28px;
-  color: #fff;
-  background: #556de7;
+  color: #ababab;
+  background: #212121;
   font-size: 15px;
   border-radius: 3px;
+  border: solid 1px #808080;
 }
 .calculator .calbox .top .inputbox button:hover, .calculator .calbox .top .inputbox button:active, .calculator .calbox .top .inputbox button.active {
-  background: #2539a0;
+  background: #808080;
+  color: #000000;
 }
 .calculator .calbox .mid {
   width: 100%;
   height: auto;
-  border: solid 1px #ababab;
+  border: solid 1px #5b5b5b;
   border-radius: 3px;
   overflow-x: hidden;
   overflow-y: auto;
@@ -6407,20 +6417,26 @@ main .bg {
 .calculator .calbox .mid table {
   width: 100%;
   height: auto;
-  background: #5a5a5a;
+  background: #252525;
+}
+.calculator .calbox .mid table tr {
+  border-bottom: solid 1px #5b5b5b;
+}
+.calculator .calbox .mid table tr:last-child {
+  border: none;
 }
 .calculator .calbox .mid table tr:nth-child(odd) {
-  background: #909090;
+  background: #191919;
 }
 .calculator .calbox .mid table tr th {
   font-size: 14px;
   padding: 5px 0px;
-  color: #fff;
+  color: #bfbfbf;
 }
 .calculator .calbox .mid table tr td {
   padding: 5px 0px;
   text-align: center;
-  color: #fff;
+  color: #ababab;
   vertical-align: middle;
 }
 .calculator .calbox .mid table tr td:nth-of-type(1), .calculator .calbox .mid table tr td:nth-of-type(4) {
@@ -6430,8 +6446,12 @@ main .bg {
   width: 50px;
   height: 18px;
   padding-left: 5px;
-  border: solid 1px #ababab;
+  background: linear-gradient(to bottom, #1f1f1f 0%, #414141 100%);
+  border: solid 1px #323232;
+  border-top: none;
+  box-shadow: 0px -1px 0px 0px #656565 inset;
   border-radius: 3px;
+  color: #ababab;
 }
 .calculator .calbox .mid table tr td .selectbox {
   position: relative;
@@ -6463,19 +6483,20 @@ main .bg {
   height: 0px;
   border-style: solid;
   border-width: 5px 3px 0px 3px;
-  border-color: #687abc transparent transparent transparent;
+  border-color: #d2d2d2 transparent transparent transparent;
   top: 9px;
-  left: 92px;
+  left: 94px;
   pointer-events: none;
 }
 .calculator .calbox .mid table tr td .selectbox select {
-  color: #687abc;
+  color: #c8c8c8;
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
   width: 55px;
   height: 22px;
-  border: solid 1px #9ba1c5;
+  border: solid 1px #858585;
+  background: #383838;
   border-radius: 3px;
   padding-left: 5px;
   line-height: 22px;
@@ -6501,13 +6522,16 @@ main .bg {
   }
 }
 .calculator .calbox .mid table tr td .selectbox input {
-  background: #d7d7d7;
+  background: linear-gradient(to bottom, #1f1f1f 0%, #414141 100%);
+  border: solid 1px #323232;
+  border-top: none;
+  box-shadow: 0px -1px 0px 0px #656565 inset;
   border-radius: 3px;
   width: 35px;
   height: 20px;
   border: none;
   text-align: center;
-  color: #585858;
+  color: #ababab;
   font-weight: bold;
   font-size: 15px;
 }
@@ -6519,7 +6543,7 @@ main .bg {
   width: 100%;
   height: auto;
   text-align: center;
-  color: #fff;
+  color: #eeeeee;
 }
 .calculator .calbox .bottom .inputbox {
   margin: 10px 0px;
@@ -6530,42 +6554,47 @@ main .bg {
   width: 100px;
   height: 28px;
   padding-left: 10px;
-  border: solid 1px #ababab;
+  border: solid 1px #464646;
+  background: linear-gradient(to bottom, #0f0f0f 21%, #303030 100%);
+  box-shadow: 0px -1px 0px 0px #737373 inset;
   border-radius: 3px;
   margin-left: 5px;
-  color: #e60012;
+  color: #eeeeee;
   font-size: 16px;
   font-weight: bold;
 }
 .calculator .calbox .bottom .inputbox button {
   width: 260px;
   height: 40px;
-  background: linear-gradient(to left, #9ca8e4, #495cc5);
-  background-color: #495cc5;
+  background: #51ae19;
   border-radius: 3px;
-  color: #fff;
+  color: #191919;
   font-size: 16px;
+  border: solid 1px #aef156;
   margin-left: 50px;
 }
 .calculator .calbox .bottom .inputbox button:hover, .calculator .calbox .bottom .inputbox button:active, .calculator .calbox .bottom .inputbox button.active {
-  background: #2539a0;
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  color: #46d317;
+  border-color: #2b7d16;
 }
 .calculator .calbox .bottom .remind {
   margin-top: 10px;
   width: calc(100% - 20px);
   border-radius: 3px;
-  background: #5a5a5a;
+  background: #252525;
   text-align: left;
-  border: solid 1px #ababab;
+  border: solid 1px #5b5b5b;
   padding: 10px;
 }
 .calculator .calbox .bottom .remind p {
   font-size: 14px;
   line-height: 20px;
+  color: #ababab;
 }
 .calculator .calbox .bottom .remind p.retitle {
   text-align: center;
-  border-bottom: solid 1px #e0e1e3;
+  border-bottom: solid 1px #5b5b5b;
   padding-bottom: 7px;
 }
 .calculator .calbox .bottom .remind p.extitle {
@@ -6659,7 +6688,7 @@ main .bg {
   font-weight: bold;
 }
 .unLogin .remindBox button:hover, .unLogin .remindBox button:active, .unLogin .remindBox button.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -8315,12 +8344,12 @@ main .bg {
   border-color: #aef156;
 }
 .changePasswordWindow .box div button:last-child:hover, .changePasswordWindow .box div button:last-child:active, .changePasswordWindow .box div button:last-child.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
 .changePasswordWindow .box div button:hover, .changePasswordWindow .box div button:active, .changePasswordWindow .box div button.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   border-color: #2b7d16;
   color: #46d317;
 }
@@ -8414,7 +8443,7 @@ main .bg {
   color: #191919;
 }
 .cardremind .box button:hover, .cardremind .box button:active, .cardremind .box button.active {
-  background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
